updated paper writing

--- a/analysis/paper/TabletSwitch_paper_references.bib
+++ b/analysis/paper/TabletSwitch_paper_references.bib
@@ -1,10 +1,31 @@
+@article{Ackermann_et_al_2020,
+  author = {Ackermann, L. and Lo, C. H. and Mani, N., and Mayor, J.},
+  year = {2020},
+  title = {Word learning from a tablet app: Toddlers perform better in a passive context},
+  journal = {PLoS ONE},
+  volume = {15},
+  number = {12},
+  pages = {e0240519},
+  doi = {10.1371/journal.pone.0240519}
+}
+
 @article{Ahooja_et_al_2022,
   author = {Ahooja, A. and Brouillard, M. and Quirk, E. and Ballinger, S. and Polka, L. and Byers-Heinlein, K. and Kircher, R.},
   year = {2022},
   title = {Family language policy among {Québec}-based parents raising multilingual infants and toddlers: A study of resources as a form of language management},
   journal = {Journal of Multilingual and Multicultural Development},
   pages = {1--20},
-  doi = {doi.org/10.1080/01434632.2022.2050918}
+  doi = {10.1080/01434632.2022.2050918}
+}
+
+@article{Axelsson_Horst_2014,
+  author = {Axelsson, E. L. and Horst, J. S.},
+  year = {2014},
+  title = {Contextual repetition facilitates word learning via fast mapping},
+  journal = {Acta Psychologica},
+  volume = {152},
+  pages = {95--99},
+  doi = {10.1016/j.actpsy.2014.08.002}
 }
 
 @article{Bail_etal_2015,
@@ -37,6 +58,17 @@
   volume = {7},
   pages = {69},
   doi = {10.3390/languages7010069}
+}
+
+@article{Bosma_Blom_2019,
+  author = {Bosma, E., and Blom, E.},
+  year = {2019},
+  title = {A code-switching asymmetry in bilingual children: code-switching from {Dutch} to {Frisian} requires more cognitive control than code-switching from {Frisian} to {Dutch}},
+  journal = {International Journal of Bilingualism},
+  volume = {23},
+  number = {6},
+  pages = {1431--1447},
+  doi = {10.1177/1367006918798972}
 }
 
 @article{Brouillard_etal_2022,
@@ -92,6 +124,14 @@
     doi = {10.1111/infa.12315}
 }
 
+@unpublished{Chuey_etal_2022,
+	  type = {PsyArxiv Preprint},
+	  title = {Conducting developmental research online vs. in-person: A meta-analysis},
+	  author = {Chuey, A. and Boyce, V. and Cao, A. and Frank, M.},
+	  year = {2022},
+    doi = {10.31234/osf.io/qc6fw}
+}
+
 @article{David_Wei_2008,
     author = {David, Annabelle and Wei, Li},
     year = {2008},
@@ -125,6 +165,48 @@
 	  editor = {Westermann, G. and Mani, N.}
 }
 
+@article{Floccia_etal_2020,
+    author = {Floccia, Caroline and Luche, Claire Delle and Lepadatu, Irina and Chow, Janette and Ratnage, Paul and Plunkett, Kim},
+    year = {2020},
+    title = {Translation equivalent and cross-language semantic priming in bilingual toddlers},
+    journal = {Journal of Memory and Language},
+    volume = {112},
+    pages = {104086},
+    doi = {10.1016/j.jml.2019.104086}
+}
+
+@article{Frank_etal_2017,
+    author = {Frank, Michael C. and Braginsky, Mika and Yurovsky, Daniel and Marchman, Virginia A.},
+    year = {2017},
+    title = {Wordbank: An open repository for developmental vocabulary data},
+    journal = {Journal of Child Language},
+    volume = {44},
+    number = {3},
+    pages = {677--694},
+    doi = {10.1017/S0305000916000209}
+}
+
+@incollection{Frank_etal_2009,
+    author = {Frank, M. C. and Goodman, N. D. and Tenenbaum, J. B. and Fernald, A.},
+    year = {2009},
+    title = {Continuity of discourse provides information for word learning},
+	  pages = {1418--1423},
+	  booktitle = {Proceedings of the 31st Annual Meeting of the Cognitive Science Society},
+	  publisher = {Cognitive Science Society},
+    address = {Amsterdam}
+}
+
+@article{Frank_etal_2016,
+    author = {Frank, M. C. and Sugarman, E. and Horowitz, A. C. and Lewis, M. L. and Yurovsky, D.},
+    year = {2016},
+    title = {Using tablets to collect data from young children.},
+    journal = {Journal of Cognition and Development},
+    volume = {17},
+    number = {1},
+    pages = {1--17},
+    doi = {10.1080/15248372.2015.1061528}
+}
+
 @article{Gardner_etal_2005,
     author = {Gardner-Chloros, P. and McEntee-Atalianis, L. and Finnis, K.},
     year = {2005},
@@ -155,6 +237,47 @@
     doi = {10.1111/1467-8721.00140}
 }
 
+@article{Hoff_etal_2012,
+	  author = {Hoff, Erika and Core, Cynthia and Place, Silvia and Rumiche, Rosario and Señor, Melissa and Parra, Marisol},
+	  year = {2012},
+	  title = {Dual language exposure and early bilingual development},
+    journal = {Journal of Child Language},
+	  volume = {39},
+	  number = {1},
+	  pages = {1--27},
+    doi = {10.1017/S0305000910000759}
+}
+
+@incollection{Horowitz_Frank_2013,
+    author = {Horowitz, A. and & Frank, M. C.},
+    year = {2013},
+    title = {Young children’s developing sensitivity to discourse continuity as a cue to reference},
+	  pages = {621--626},
+	  booktitle = {Proceedings of the 35th Annual Meeting of the Cognitive Science Society},
+	  publisher = {Cognitive Science Society},
+    address = {Berlin}
+}
+
+@article{Horst_Hout_2016,
+	  author = {Horst, J. S. and Hout, M. C.},
+	  year = {2016},
+	  title = {The {Novel Object} and {Unusual Name} ({N}{O}{U}{N}) Database: A collection of novel images for use in experimental research},
+    journal = {Behavior Research Methods},
+	  volume = {48},
+	  pages = {1393--1409},
+    doi = {10.3758/s13428-015-0647-3}
+}
+
+@article{Kalashnikova_etal_2018,
+	  author = {Kalashnikova, M and Escudero, P and Kidd, E.},
+	  year = {2018},
+	  title = {The development of fast-mapping and novel word retention strategies in monolingual and bilingual infants},
+    journal = {Developmental Science},
+	  volume = {21},
+	  pages = {e12674},
+    doi = {10.1111/desc.12674}
+}
+
 @article{Kircher_etal_2022,
     author = {Kircher, R. and Quirk, E. and Brouillard, M. and Ahooja, A. and Ballinger, S. and Polka, L. and Byers-Heinlein, K.},
     year = {2022},
@@ -164,6 +287,17 @@
     number = {5},
     pages = {527--552},
     doi = {10.1177/0261927X22107885}
+}
+
+@article{Kirkorian_etal_2016,
+    author = {Kirkorian, H. L. and Choi, K. and Pempek, T. A.},
+    year = {2016},
+    title = {Toddlers’ word learning from contingent and noncontingent video on touch screens},
+    journal = {Child Development},
+    volume = {87},
+    number = {2},
+    pages = {405--413},
+    doi = {10.1111/cdev.12508}
 }
 
 @unpublished{Kosie_etal_prep,
@@ -201,6 +335,17 @@
     doi = {10.18637/jss.v082.i13}
 }
 
+@article{Lawson_Sachdev_2000,
+    author = {Lawson, S. and Sachdev, I.},
+    year = {2000},
+    title = {Codeswitching in Tunisia: Attitudinal and behavioural dimensions},
+    journal = {Journal of Pragmatics},
+    volume = {32},
+    number = {9},
+    pages = {1343--1361},
+    doi = {10.1016/S0378-2166(99)00103-4}
+}
+
 @Manual{Lenth_2022,
     title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
     author = {Lenth, R. V.},
@@ -209,7 +354,29 @@
     url = {https://CRAN.R-project.org/package=emmeans},
 }
 
- @misc{migration_policy_institute_2021,
+@article{Marchman_etal_2017,
+    author = {Marchman, V. A. and Martínez, L. Z. and Hurtado, N. and Grüter, T. and Fernald, A.},
+    year = {2017},
+    title = {Caregiver talk to young {Spanish-English} bilinguals: Comparing direct observation and parent-report measures of dual-language exposure},
+    journal = {Developmental Science},
+    volume = {20},
+    number = {1},
+    pages = {e12425},
+    doi = {10.1111/desc.12425}
+}
+
+@article{Marian_etal_2007,
+    author = {Marian, V. and Blumenfeld, H. K. and Kaushanskaya, M.},
+    year = {2007},
+    title = {The {Language Experience and Proficiency Questionnaire} ({L}{E}{A}{P}-{Q}): Assessing language profiles in bilinguals and multilinguals},
+    journal = {Journal of Speech, Language, and Hearing Research},
+    volume = {50},
+    number = {4},
+    pages = {940--967},
+    doi = {10.1044/1092-4388(2007/067)}
+}
+
+@misc{migration_policy_institute_2021,
     title = {Tabulation of data from the U.S. Census Bureau's pooled 2015-2019 American Community Survey on U.S. Young Children (ages 0 to 8) by Dual Language Learner Status: National and State Sociodemographic and Family Profiles},
     url = {https://www.migrationpolicy.org/programs/data-hub/charts/us-state-profiles-young-dlls},
     author = {{Migration Policy Institute}},
@@ -250,6 +417,16 @@
     address = {New Jersey, US},
     editor = {F. Coulmas},
     doi = {10.1002/9781405166256.ch13}
+}
+
+@article{Orena_etal_2020,
+    author = {Orena, A. J. and Byers-Heinlein, K. and Polka, L.},
+    year = {2020},
+    title = {What do bilingual infants actually hear? Evaluating measures of language input to bilingual-learning 10-month-olds},
+    journal = {Developmental Science},
+    volume = {23},
+    pages = {e12901},
+    doi = {10.1111/desc.12901}
 }
 
 @article{Orena_Polka_2019,
@@ -343,7 +520,25 @@
     number = {4},
     pages = {516--533},
     doi = {10.1080/10409289.2020.1780090}
-  }
+}
+
+@article{Rocha_Barr_2022,
+    author = {Rocha-Hidalgo, J. and Barr, R.},
+    year = {2022},
+    title = {Defining bilingualism in infancy and toddlerhood: A scoping review},
+    journal = {International Journal of Bilingualism},
+    doi = {10.1177/13670069211069067}
+}
+
+@article{Rocha_etal_2021,
+    author = {Rocha-Hidalgo, J. and Feller, M. and Blanchfield, O. A. and Kucker, S. C. and Barr, R. F.},
+    year = {2021},
+    title = {Patterns of mutual exclusivity and retention: A study of monolingual and bilingual 2-year-olds},
+    journal = {Infancy},
+    volume = {26},
+    pages = {1011--1036},
+    doi = {10.1111/infa.12432}
+}
 
 @book{Ronjat_1913,
     author = {Ronjat, J},
@@ -362,6 +557,27 @@
     number = {2},
     pages = {254--266},
     doi = {10.3138/cpp.2021-064}
+  }
+
+@article{Schwab_Lew_2016,
+    author = {Schwab, J. F. and Lew-Williams, C.},
+    year = {2016},
+    title = {Repetition across successive sentences facilitates young children’s word learning},
+    journal = {Developmental Psychology},
+    volume = {52},
+    number = {6},
+    pages = {879--886},
+    doi = {10.1037/dev0000125}
+  }
+
+@article{Semmelmann_etal_2016,
+    author = {Semmelmann, Kilian and Nordt, Marisa and Sommer, Katharina and Röhnke, Rebecka and Mount, Luzie and Prüfer, Helen and Terwiel, Sophia and Meissner, Tobias W. and Koldewyn, Kami and Weigelt, Sarah},   
+    year = {2016},
+    title = {U can touch this: how tablets can be used to study cognitive development},
+    journal = {Frontiers in Psychology},
+    volume = {7},
+    pages = {1021},
+    doi = {10.3389/fpsyg.2016.01021}
   }
 
 @article{Thibeault_Matheson_2020,
